[RFC] Half pixel correction

Summary:
Borders of decoration are stored in a texture atlas with 1 pixel gap.
Depending on some circumstances, texture bleeding could happen, e.g.
when zooming screen(see 360549), or when scaling windows.

This diff addresses the problem above by adding the half pixel
correction. The biggest drawback of the half pixel correction is that
it doesn't work in the case when textures have mipmaps. AFAIK,
the decoration texture atlas and window pixmap do not have mipmaps.

Half pixel correction happens only for decoration and content window
quads. If shadow quads bleed, that's fine, same with the cross fade
quads.

BUG: 360549

Test Plan:
* Zoomed screen
* No seams

Reviewers: #kwin, davidedmundson, fredrik, graesslin

Subscribers: kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D13382